--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
       </article>
       <footer>
-        <p>&copy; 2022 Your Name</p>
+        <p>&copy; 2022 Jake D'Esposito</p>
       </footer>
     </main>
   </body>
