--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Basic:wght@400;700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Times New Roman -->
+    <link href="http://fonts.cdnfonts.com/css/times-new-roman" rel="stylesheet">
     <!-- modern normalize for cross-browser compatibility -->
     <link href="css/modern-normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -34,7 +36,7 @@
         </div>
       </header>
       <article><!-- page content -->
-        <p><span class="dropcap">T</span>he first question of course was, how to get dry again: they had a consultation about this, and after a few minutes it seemed quite natural to Alice to find herself talking familiarly with them, as if she had known them all her life.</p>
+        <p style="--firstPgFontSize: 22px; font-size: var(--firstPgFontSize);"><span class="dropcap">T</span>he first question of course was, how to get dry again: they had a consultation about this, and after a few minutes it seemed quite natural to Alice to find herself talking familiarly with them, as if she had known them all her life.</p>
         <p>Indeed, she had quite a long argument with the Lory, who at last turned sulky, and would only say, “I am older than you, and must know better”; and this Alice would not allow without knowing how old it was, and, as the Lory positively refused to tell its age, there was no more to be said.</p>
         <p>At last the Mouse, who seemed to be a person of authority among them, called out, “Sit down, all of you, and listen to me! I’ll soon make you dry enough!” They all sat down at once, in a large ring, with the Mouse in the middle. Alice kept her eyes anxiously fixed on it, for she felt sure she would catch a bad cold if she did not get dry very soon.</p>
         <figure>
